# AgroOrt

./: .gitignore  EF (1).docx  EF.md  ET.docx  ET.md  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: agroquimicos.py  clima.py  cosecha.py  fertilizacion.py  rendimiento.py  siembra.py  variedades.py
tests/: test_endpoints.py
